--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 #mainNav {
-    background-color: #343a40;
+    background-color: #0a6ebb;
     transition: background-color 0.5s;
 }
 
@@ -8,6 +8,7 @@
 }
 
 #mainNav .navbar-toggler {
+    color: white;
     border: none;
     outline: none;
 }
@@ -17,15 +18,14 @@
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-    color: #07acf3;
+    color: #050505;
     padding: 0.75rem 1rem;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link:hover {
-    color: #0d7be8;
+    color: #fafafa;
 }
 
 .collapse.show {
     display: block !important;
 }
-
